# infotecs

./: CMakeLists.txt  Makefile
first_app/: client.cpp  client.h  main.cpp
infotecs/: CMakeLists.txt  Makefile  main
infotecs/first_app/: main  main.cpp  server.cpp  server.h
infotecs/second_app/: client.cpp  client.h  main  main.cpp
second_app/: main.cpp  server.cpp  server.h
